# wasmtime

./: Cargo.toml  INSTRUCTIONS.md  README.md  RELEASES.md  build.rs  perf.sh  perf_out.data  perf_out.data.old  profile.sh  test.sh
.github/: subscribe-to-label.json
.github/workflows/: main.yml
cranelift/: Cargo.toml
cranelift/codegen/: Cargo.toml
cranelift/codegen/src/: alias_analysis.rs  context.rs  inline.rs  isle_prelude.rs  lib.rs  opts.rs  prelude.isle  write.rs  (+1 more)
cranelift/frontend/: Cargo.toml
cranelift/module/: Cargo.toml
cranelift/object/: Cargo.toml
cranelift/pulley/: Cargo.toml
cranelift/pulley/fuzz/: Cargo.toml
cranelift/pulley/fuzz/fuzz_targets/: interp.rs  roundtrip.rs
cranelift/pulley/src/: decode.rs  disas.rs  encode.rs  imms.rs  interp.rs  lib.rs  op.rs  opcode.rs  regs.rs
cranelift/pulley/tests/all/: disas.rs  interp.rs
cranelift/serde/: Cargo.toml
cranelift/wasm/: Cargo.toml
crates/api/: Cargo.toml
crates/cache/: Cargo.toml
crates/cranelift/: Cargo.toml
crates/environ/: Cargo.toml
crates/fiber/: Cargo.toml
crates/fuzzing/: Cargo.toml
crates/fuzzing/src/: generators.rs  lib.rs  main.rs  oracles.rs
crates/fuzzing/src/generators/: api.rs  gc_ops.rs  pooling_config.rs  table_ops.rs
crates/fuzzing/src/oracles/: dummy.rs  mutate_differential.rs
crates/jit/: Cargo.toml
crates/jit-debug/: Cargo.toml
crates/lightbeam/: Cargo.toml
crates/runtime/: Cargo.toml
crates/test-programs/: Cargo.toml
crates/wasi-common/: Cargo.toml
crates/wasmtime/: Cargo.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: mutate_differential.rs
misc/wasmtime-py/: Cargo.toml
pulley/src/: disas.rs
src/: common.rs
src/commands/: run.rs  serve.rs
tests/: disas.rs  instantiate.rs  wast.rs  wast_testsuites.rs
tests/all/: compile_time_builtins.rs  copying_probe.rs  func.rs  gc.rs  linker.rs  main.rs  pooling_allocator.rs
tests/disas/: alias-region-globals.wat  alias-region-memories.wat  alias-region-tables.wat  basic-wat-test.wat  bounds-check.wat  call-indirect.wat  duplicate-function-types.wat  duplicate-loads-dynamic-memory.wat  duplicate-loads-static-memory.wat  dynamic-memory-no-spectre-access-same-index-different-offsets.wat  dynamic-memory-yes-spectre-access-same-index-different-offsets.wat  epoch-interruption.wat  f32-load.wat  f32-store.wat  f64-load.wat  f64-store.wat  fibonacci.wat  fixed-size-memory.wat  foo.wat  global-get.wat  globals.wat  i32-load.wat  i32-load16-s.wat  i32-load16-u.wat  i32-load8-s.wat  i32-load8-u.wat  i32-store.wat  i32-store16.wat  i32-store8.wat  i64-load.wat  i64-load16-s.wat  i64-load16-u.wat  i64-load8-s.wat  i64-load8-u.wat  i64-store.wat  i64-store16.wat  i64-store32.wat  i64-store8.wat  icall-loop.wat  icall-simd.wat  (+23 more)
(+395 files in other folders)
