[package]
authors = ["The Wasmtime Project Developers"]
description = "Fuzzing infrastructure for Wasmtime"
edition = "2018"
name = "wasmtime-fuzzing"
publish = false
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.22"
arbitrary = "0.2.0"
binaryen = "0.8.2"
bincode = "1.2.1"
clap = "2.33.0"
env_logger = "0.7.1"
log = "0.4.8"
serde = { version = "1.0.101", features = ["derive"] }
tempfile = "3.1.0"
wasmparser = "0.45.0"
wasmprinter = "0.2.0"
wasmtime = { path = "../api" }
wasmtime-environ = { path = "../environ" }
wasmtime-jit = { path = "../jit" }
wat = "1.0"
